# FallingSand

./: .gitignore  README.md  pyproject.toml
app/: main.pyxapp
src/: main.py
src/game/: __init__.py  colors.py  game.py
src/game/rendering/: __init__.py  base.py  ingame_renderer.py  menu_renderer.py
src/game/simulation/: __init__.py  material.py  world.py
src/game/states/: __init__.py  base_state.py  ingame_state.py  menu_state.py
src/game/ui/: __init__.py  base.py  button.py  material_selector.py
