[project]
name = "pyxelpixelsimulation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyxel (>=2.5.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# select = ["ALL"]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP", # pyupgrade
#   "B",  # flake8-bugbear
    "I",  # isort
]

[tool.mypy]
strict = true
